--- a/Cookbook/Views/Food/Index.cshtml
+++ b/Cookbook/Views/Food/Index.cshtml
@@ -198,7 +198,7 @@
             }
             
             var d = new Date();
-            var date = d.getYear() + 1900 + "-" + d.getMonth() + "-" + d.getDay();
+            var date = d.getYear() + 1900 + "-" + ("0" + (d.getMonth() + 1)).slice(-2) + "-" + ("0" + d.getDay()).slice(-2);
 
             $.ajax({
                 type: "POST",
